removed TLS function to avoid downloading OpenSSL library. NOTE: must turn all TLS related functions off in libwebsockets-src folder in cmake-build-debug after it compiles with error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ target_include_directories(
 
 target_link_libraries(
        agent
-       ssl
-       crypto
+       #ssl
+       #crypto
        websockets
        spdlog
 )
